Fix - Adjust padding and alignment of Mutation Signature titles

--- a/src/components/dashboard/report/genomic/genomic.scss
+++ b/src/components/dashboard/report/genomic/genomic.scss
@@ -187,7 +187,6 @@
       margin: 0;
       padding: 5px 2px 5px 7px;
       text-transform: uppercase;
-      width: 100%;
       background-color: rgb(154,162,204);
       
       span {
@@ -212,7 +211,7 @@
         text-transform: lowercase;
       }
     }
-    
+
     .dataBox {
       margin: 7px 4px;
       
@@ -316,6 +315,10 @@
     .mutationTable {
       background-color: rgb(235,235,235);
       margin: 0px 4px 7px 4px;
+
+      .signatureTitle {
+        padding-right: 6px;
+      }
       
       .header {
 
@@ -326,7 +329,7 @@
             font-size: 0.9em;
             background-color: rgb(190,190,190);
             box-sizing: border-box;
-            border-right: 8px solid rgb(220,220,220);
+            border-right: 6px solid rgb(220,220,220);
             border-bottom: 8px solid rgb(220,220,220);
 
             span.listitem {
